Fix underline not being visible sometimes (#66)
* Fix underline not showing on some websites

* Remove unused classname

* Better width/height ratio for pixel perfect rendering

* Tweak for small screen sizes

--- a/core/tooltip/tooltip.less
+++ b/core/tooltip/tooltip.less
@@ -47,8 +47,8 @@ to be defined in global scope
 }
 
 @art-width: 228px;
-@art-height: 341px;
-@art-ratio: calc(341 / 228 * 100%);
+@art-height: 342px;
+@art-ratio: calc(342 / 228 * 100%);
 
 .artFrame {
   display: block;
@@ -77,6 +77,7 @@ to be defined in global scope
   position: relative;
   margin-left: 10px;
   width: 300px;
+  min-width: 200px;
   max-width: 30vw;
   border-radius: 6px;
   .shadow();
@@ -156,6 +157,12 @@ to be defined in global scope
   // font-weight: bold;
   color: #fff;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+@media (max-width: 800px) {
+  .tooltipCategories {
+    font-size: 14px;
+  }
 }
 
 @keyword-color: black;
